--- a/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
@@ -15,12 +15,7 @@
         <thead>
             <tr>
                 <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents" class="name-colom">Name</th>
-                <th data-field="Baptism" data-formatter="baptismFormatter">Baptism</th>
-                <th data-field="Confirmation" data-formatter="confirmationFormatter">Confirmation</th>
-                <th data-field="Initiatory" data-formatter="initiatoryFormatter">Initiatory</th>
-                <th data-field="Endowment" data-formatter="endowmentFormatter">Endowment</th>
-                <th data-field="SealedToParent" data-formatter="sealedToParentFormatter">Sealed To Parent</th>
-                <th data-field="SealedToSpouse" data-formatter="sealedToSpouseFormatter">Sealed To Spouse</th>
+                <th data-field="Status" data-formatter="statusFormatter">Status</th>
             </tr>
         </thead>
     </table>
