--- a/Web.UI/Views/Research/Retrieve.cshtml
+++ b/Web.UI/Views/Research/Retrieve.cshtml
@@ -22,9 +22,9 @@
         </div>
 
         <div class="form-group">
-            <label for="retrieveGeneration" class="col-sm-2 control-label">Generations:</label>
+            <label for="retrieveGenerationDiv" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
-                <div class="input-group addChildren-box">
+                <div class="input-group">
                     <div id="retrieveGenerationDiv"></div>
                 </div>
             </div>
