--- a/Web.UI/Views/Research/PersonUrls.cshtml
+++ b/Web.UI/Views/Research/PersonUrls.cshtml
@@ -180,6 +180,10 @@
         </div>
     </form>
 </div>
+<div id="personInfoDiv" class="personInfo">
+    <div id="content"></div>
+</div>
 <div id="personUrlsSpinner" />
+
 
 <script type="text/javascript">require(['main'], function (main) { require(['personUrlsController']); });</script>
