--- a/Web.UI/Views/Research/PersonUrlOptions.cshtml
+++ b/Web.UI/Views/Research/PersonUrlOptions.cshtml
@@ -41,6 +41,20 @@
         <div class="row">
             <div class="text-center">
                 <button id="personUrlOptionsOkButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-ok24 dialog-buttons"></i> OK</button>
+                <div class="btn-group">
+                    <button type="button" id="helpButton" class=" btn-u btn-brd btn-brd-hover rounded btn-u-blue btn btn-primary dropdown-toggle" data-toggle="dropdown" data-style="expand-left">
+                        <i class="fa fmf-help24 dialog-buttons"></i>
+                        Help
+                    </button>
+                    <ul class="dropdown-menu help-dropdown" role="menu">
+                        <li>
+                            <a href="#">Video</a>
+                        </li>
+                        <li>
+                            <a href="#">Tutorial</a>
+                        </li>
+                    </ul>
+                </div>
                 <button id="personUrlOptionsCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
             </div>
         </div>
