--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -61,6 +61,40 @@
         </div>
     </div>
 </div>
+<!--Main Featur Block-->
+<div class="container" style="padding: 0px">
+    <!-- Service Blocks -->
+    <div class="row margin-bottom-30">
+        <div class="col-md-3 ftr-col-layout">
+            <div class="features-layout">
+                <a class="ftr-a feature-2 " href="@Url.Action("Research", "Home")">
+                    <h4 class="ftr-h5">Starting Point.</h4> <h5 class="ftr-h5">Easy way to get started.</h5>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-3 ftr-col-layout">
+            <div class="features-layout">
+                <a class="ftr-a feature-1 " href="@Url.Action("Research", "Home")">
+                    <h4 class="ftr-h5">Find Person.</h4> <h5 class="ftr-h5">Begin to research a person.</h5>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-3 ftr-col-layout">
+            <div class="features-layout">
+                <a class="ftr-a feature-3 " href="@Url.Action("Research", "Home")">
+                    <h4 class="ftr-h5">Hints.</h4> <h5 class="ftr-h5">Add available recources.</h5>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-3 ftr-col-layout">
+            <div class="features-layout">
+                <a class="ftr-a feature-4 " href="@Url.Action("Research", "Home")">
+                    <h4 class="ftr-h5">Incomplete Ordinances.</h4> <h5 class="ftr-h5">Find available ordinances.</h5>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--=== Purchase Block ===-->
 <div class="purchase">
