Added error handling changes, some changes for url options, and some bug fixes.

--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
     <div class="row margin-bottom-30">
         <div class="col-md-3 ftr-col-layout">
             <div class="features-layout">
-                <a class="ftr-a feature-2 " href="@Url.Action("Research", "Home")">
+                <a id="startingPoint" href="#" class="ftr-a feature-2 ">
                     <h4 class="ftr-h5">Starting Point.</h4> <h5 class="ftr-h5">Easy way to get started.</h5>
                 </a>
             </div>
