--- a/Web.UI/Views/Shared/_Layout.cshtml
+++ b/Web.UI/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     <div class="collapse navbar-collapse navbar-responsive-collapse">
                         <ul class="nav navbar-nav">
 
-                            <li id="researchLink">@Html.ActionLink("Research", "Research", "Home")</li>
+                            <li>@Html.ActionLink("Research", "Research", "Home")</li>
                             <!-- Search Block
                 <li><a href="http://findmyfamilies.wordpress.com/">Blog</a></li>
 
