--- a/Web.UI/Views/Research/Features.cshtml
+++ b/Web.UI/Views/Research/Features.cshtml
@@ -1,45 +1,13 @@
-<form class="form-horizontal" action=" " method="post" id="featuresform">
-        <div class="left-section">
-            <img class="row" style="position: relative; top: 90px;" src="/Images/features.png" alt="">
+<form class="form-horizontal" style="margin-top: -2px" action=" " method="post" id="featuresform">
+    <iframe src="https://player.vimeo.com/video/96324885?title=0&amp;byline=0&amp;portrait=0"  align="middle" width="870" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div class="col-lg-12">
+        <hr />
+        <div class="text-center">
+            <button id="featuresSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Try It Now</button>
+            <button type='button' id="featuresTutorialButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Tutorial</button>
+            <button type='button' id="featuresCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
         </div>
-    <fieldset>
-        <legend>Send Us Your Thoughts</legend>
-
-        <div class="right-section">
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <p>The features is anonymous, so include your email address if you would like a reply.</p>
-                </div>
-            </div>
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <div class="radio">
-                            <label><input type="radio" id="featuresBug" name="optradio">Bug</label>&nbsp;&nbsp;
-                            <label><input type="radio" id="featuresFeatureRequest" name="optradio">Feature Request</label>&nbsp;&nbsp;
-                            <label><input type="radio" id="featuresOther" name="optradio">Other</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <textarea class="form-control features-textarea" id="featuresMessage" name="message" placeholder="Message"></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <input name="email" id="featuresEmail" placeholder="Email Address" class="form-control" type="text">
-                    </div>
-                </div>
-            </div>
-</fieldset>
-        <div class="col-lg-12">
-            <hr />
-            <div class="text-center">
-                <button id="featuresSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Send Features</button>
-                <button type='button' id="featuresResetButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-clean24 dialog-buttons"></i> Clear</button>
-                <button type='button' id="featuresCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
-            </div>
-        </div>
+    </div>
   
 </form>
 
