--- a/Web.UI/Views/Research/Features.cshtml
+++ b/Web.UI/Views/Research/Features.cshtml
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
         <hr />
         <div class="text-center">
-            <button id="featuresSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Try It Now</button>
+            <button id="featuresSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i><span> Try It Now</span></button>
             <button type='button' id="featuresTutorialButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Tutorial</button>
             <button type='button' id="featuresCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
         </div>
