Centralized access to feedback and features in researchHelper

--- a/Web.UI/Views/Shared/_Layout.cshtml
+++ b/Web.UI/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
                         <ul class="nav navbar-nav">
 
                             <li>@Html.ActionLink("Research", "Research", "Home")</li>
+                            <li><a id="feedback" href="#">Feedback</a></li>
                             <!-- Search Block
                 <li><a href="http://findmyfamilies.wordpress.com/">Blog</a></li>
 
