--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -1,4 +1,26 @@
-﻿<div class ="report-table">
+﻿<style type="text/css">
+
+    .startingPointReportTable {
+        overflow-x: visible !important;
+        overflow-y: visible !important;
+    }
+
+    .personInfo {
+        background: rgba(240, 240, 240, .99);
+        width: 400px;
+        height: 260px;
+        padding: 7px;
+        float: none;
+        margin-left: 100px !important;
+        margin-right: 100px !important;
+        box-shadow: 4px 7px 5px 2px rgba(200, 200, 200, 0.1);
+        border: 1px solid rgb(168, 168, 168);
+        border-radius: 10px;
+        display: none;
+    }
+</style>
+
+<div class ="report-table">
     <table id="startingPointReportTable"
            data-toggle="table"
            data-height="800"
@@ -39,9 +61,11 @@
     <button type='button' id="startingPointReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close </button>
 </div>
 </div>
-
-
 <div id="startingPointReportSpinner" />
+
+<div id="personInfoDiv" class="personInfo">
+    <div id="content"></div>
+</div>
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
 <script type="text/javascript">require(['main'], function (main) { require(['startingPointReportController']); });</script>
