--- a/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
@@ -1,26 +1,4 @@
-﻿<style type="text/css">
-
-    .possibleDuplicatesReportTable {
-        overflow-x: visible !important;
-        overflow-y: visible !important;
-    }
-
-    .personInfo {
-        background: rgba(240, 240, 240, .99);
-        width: 400px;
-        height: 260px;
-        padding: 7px;
-        float: none;
-        margin-left: 100px !important;
-        margin-right: 100px !important;
-        box-shadow: 4px 7px 5px 2px rgba(200, 200, 200, 0.1);
-        border: 1px solid rgb(168, 168, 168);
-        border-radius: 10px;
-        display: none;
-    }
-</style>
-
-<div class ="report-table">
+﻿<div class ="report-table">
     <table id="possibleDuplicatesReportTable"
            data-toggle="table"
            data-height="800"
