--- a/Web.UI/Views/Research/Features.cshtml
+++ b/Web.UI/Views/Research/Features.cshtml
@@ -1,5 +1,5 @@
 <form class="form-horizontal" style="margin-top: -2px" action=" " method="post" id="featuresform">
-    <iframe src="https://player.vimeo.com/video/136109637?title=0&amp;byline=0&amp;portrait=0"  align="middle" width="900" height="510" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe name="myFrame" id="myFrame" src="https://player.vimeo.com/video/136109637?title=0&amp;byline=0&amp;portrait=0"  align="middle" width="900" height="510" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <div class="col-lg-12">
         <hr />
         <div class="text-center">
