Made a bunch of fixes, primarily for findclues

--- a/Web.UI/Views/Research/FindCluesReport.cshtml
+++ b/Web.UI/Views/Research/FindCluesReport.cshtml
@@ -42,7 +42,7 @@
 </div>
 <div id="findCluesReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="findCluesPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
