--- a/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
@@ -41,7 +41,7 @@
 </div>
 <div id="incompleteOrdinancesReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="incompleteOrdinancesPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
