--- a/Web.UI/Views/Research/PlaceProblemsReport.cshtml
+++ b/Web.UI/Views/Research/PlaceProblemsReport.cshtml
@@ -43,7 +43,7 @@
 </div>
 <div id="placeProblemsReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="placeProblemsPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
