--- a/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
@@ -44,7 +44,7 @@
 </div>
 <div id="possibleDuplicatesReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="possibleDuplicatesPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
