--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -41,7 +41,7 @@
 </div>
 <div id="startingPointReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="startingPointPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
