--- a/Web.UI/Views/Research/DateProblemsReport.cshtml
+++ b/Web.UI/Views/Research/DateProblemsReport.cshtml
@@ -43,7 +43,7 @@
 </div>
 <div id="dateProblemsReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="dateProblemsPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
