--- a/Web.UI/Views/Research/FindClues.cshtml
+++ b/Web.UI/Views/Research/FindClues.cshtml
@@ -4,7 +4,9 @@
             <label for="findCluesReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="findCluesReportId"></select>
+                    <select class="form-control" id="findCluesReportId">
+                        <option value="0">Select</option>
+                    </select>
                     <span class="input-group-btn">
                         <button id="findCluesRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-retrieve24 dialog-buttons btn-retrieve-find"></i> Retrieve</button>
                     </span>
@@ -13,23 +15,29 @@
         </div>
         <div class="form-group">
             <label for="findCluesResearchType" class="col-sm-2 control-label">Research:</label>
-            <div class="col-sm-10">
-                <input id="findCluesResearchType" type="text" class="form-control" style="width:120px" disabled>
+            <div class="col-sm-3">
+                <select class="form-control researchType" id="findCluesResearchType">
+                    <option>Ancestors</option>
+                    <option>Descendants</option>
+                </select>
             </div>
         </div>
         <div class="form-group">
             <label for="findCluesPersonId" class="col-sm-2 control-label">Name:</label>
-            <div class="col-sm-10">
+            <div class="col-sm-7">
                 <div class="input-group">
-                    <input id="findCluesPersonId" type="text" class="form-control" style="width:400px" disabled>
+                    <select class="form-control" id="findCluesPersonId"></select>
+                    <span class="input-group-btn">
+                        <button id="findCluesFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
+                    </span>
                 </div>
             </div>
         </div>
         <div class="form-group">
-            <label for="findCluesGeneration" class="col-sm-2 control-label">Generations:</label>
-            <div class="col-sm-10">
+            <label for="findCluesGenerationDiv" class="col-sm-2 control-label">Generations:</label>
+            <div class="col-sm-4">
                 <div class="input-group">
-                    <input id="findCluesGeneration" type="text" class="form-control" style="width:40px" disabled>
+                    <div id="findCluesGenerationDiv"></div>
                 </div>
             </div>
         </div>
