--- a/Web.UI/Views/Research/HintsReport.cshtml
+++ b/Web.UI/Views/Research/HintsReport.cshtml
@@ -41,7 +41,7 @@
 </div>
 <div id="hintsReportSpinner" />
 
-<div id="personInfoDiv" class="personInfo">
+<div id="hintsPersonInfoDiv" class="personInfo">
     <div id="content"></div>
 </div>
 
