--- a/Web.UI/Views/Research/FindCluesReport.cshtml
+++ b/Web.UI/Views/Research/FindCluesReport.cshtml
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents" class="name-colom">Name</th>
-                <th data-field="Clue" data-formatter="clueFormatter">Clue</th>
+                <th data-field="Clue" data-formatter="clueFormatter" class="findClue-table-clues">Clue</th>
                 <th data-field="Helpers" data-formatter="helpersFormatter">Helpers</th>
             </tr>
         </thead>
