--- a/Web.UI/Views/Research/StartingPoint.cshtml
+++ b/Web.UI/Views/Research/StartingPoint.cshtml
@@ -4,7 +4,7 @@
             <label for="startingPointReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="startingPointReportId">
+                    <select class="form-control personAction1" id="startingPointReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
@@ -24,13 +24,13 @@
         </div>
         <div class="form-group">
             <label for="startingPointPersonId" class="col-sm-2 control-label">Name:</label>
-            <div class="col-sm-7">
+            <div class="col-sm-6">
                 <div class="input-group">
-                    <select class="form-control" id="startingPointPersonId"></select>
+                    <select class="form-control  personAction1" id="startingPointPersonId"></select>
                     <span class="input-group-btn">
-                        <button id="startingPointFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
-                    </span>
-                </div>
+                            <button id="startingPointFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
+                        </span>
+                    </div>
             </div>
         </div>
         <div class="form-group">
@@ -82,7 +82,11 @@
         </div>
     </form>
 </div>
+<div id="startingPointPersonInfoDiv" class="startingPointPersonInfo">
+    <div id="startingPointContent"></div>
+</div>
 <div id="startingPointSpinner"/>
+
 
 <script type="text/javascript">require(['main'], function (main) { require(['startingPointController']); });</script>
 
